# AsykyLauncher

./: .env  .gitignore  AppShell.xaml  MainPage.xaml  MainPage.xaml.cs  MauiApp3.sln  README.md  SettingsPage.xaml  SettingsPage.xaml.cs  bun.lockb  global.d.ts  next.config.js  package-lock.json  package.json  tsconfig.json
Resources/Styles/: Styles.xaml
Services/: ConfigManager.cs  FileManager.cs  SessionManager.cs
Services/ConfigStrategies/: IConfigStrategy.cs  JsonConfigStrategy.cs
Services/Providers/: ConfigProvider.cs  SessionProvider.cs
app/: error.tsx  layout.tsx  page.tsx
app/accounts/: layout.tsx  page.tsx
app/login/: layout.tsx  page.tsx
app/register/: layout.tsx  page.tsx
app/resetpassword/: layout.tsx  page.tsx
app/settings/: layout.tsx  page.tsx
components/: RangeSlider.tsx  Switch.tsx
main/: background.ts  constants.ts  createUserFolder.ts  cryptoUtils.ts  launchGame.ts  preload.ts  sessionManager.ts  sessionTypes.ts
main/utils/: settings.ts
renderer/: next.config.js  sessionSelector.tsx  tsconfig.json
renderer/pages/: forgot-password.tsx  forgotpassword.tsx  home.tsx  index.tsx  login.tsx  next.tsx  profile-selector.tsx  profile.tsx  register.tsx  settings.tsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/components/: language_switcher.rs  skeleton.rs
src-tauri/src/: game_files_verify.rs  main.rs  minecraft_launcher.rs  sessions.rs  settings.rs  storage.rs  tray.rs
src/components/: FilterBar.tsx  GameSettings.tsx  GeneralSettings.tsx  Header.tsx  OtherSettings.tsx  ProductCard.tsx  ProductList.tsx  SystemSettings.tsx
src/context/: UserContext.tsx
src/lang/: i18n.ts
src/pages/: Home.tsx  Login.tsx  Progress.tsx  (+4 more)
(+6 files in other folders)
