[package]
name = "asyky-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
log = "0.4"
env_logger = "0.9"
tauri = { version = "1", features = ["shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
reqwest = { version = "0.12.5", features = ["json"] }
chacha20 = "0.9.1"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
open_launcher = "1.5.5"
sha2 = "0.10.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
